--- a/Crochelves/about.html
+++ b/Crochelves/about.html
@@ -26,7 +26,7 @@
     <h2>About Our Company</h2>
 
     <p>
-      Cozy Stitches is a small online business that sells handmade crochet products made with love and care. The goal is to just give cute and affordable handmade items that bring comfort and happiness to our customers.
+      Crochelves is a small online business that sells handmade crochet products made with love and care. The goal is to just give cute and affordable handmade items that bring comfort and happiness to our customers.
     </p>
 
     <h3>About the Owner</h3>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
