--- a/Crochelves/about.html
+++ b/Crochelves/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cozy Stitches - About</title>
+  <title>Crochelves - About</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,4 +47,5 @@
 
 </body>
 </html>
+
 
