--- a/Crochelves/contact.html
+++ b/Crochelves/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cozy Stitches - Contact</title>
+  <title>Crochelves - Contact</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -53,3 +53,4 @@ function sendMessage(e) {
 
 </body>
 </html>
+
