--- a/Crochelves/index.html
+++ b/Crochelves/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cozy Stitches - Home</title>
+  <title>Crochelves - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
